# clean-language-manager

./: .gitignore  CLAUDE.md  Cargo.toml  DYNAMIC-OPTIONS-IMPLEMENTATION-GUIDE.md  KNOWLEDGE.md  README.md  TASKS.md  clean-language-manager-spec.md  install.ps1  install.sh  rustfmt.toml  test.cln
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: DYNAMIC-OPTIONS-IMPLEMENTATION-GUIDE.md  README.md  api-reference.md  architecture.md  functional-specification.md  user-guide.md
spec/: api-reference.md
src/: error.rs  lib.rs  main.rs
src/commands/: available.rs  cleanup.rs  doctor.rs  init.rs  install.rs  list.rs  local.rs  mod.rs  plugin.rs  sync.rs  test.rs  uninstall.rs  update.rs  use_version.rs
src/core/: codegen.rs  compatibility.rs  config.rs  discovery.rs  download.rs  frame.rs  github.rs  heartbeat.rs  mod.rs  server.rs  shim.rs  version.rs
src/plugin/: manifest.rs  mod.rs  registry.rs  scaffold.rs
src/utils/: fs.rs  mod.rs  shell.rs
tests/: graveyard_prune.rs  plugin_pin_contract.rs
