[package]
name = "cleen"
version = "0.4.1"
authors = ["Clean Language Team"]
edition = "2021"
description = "A version manager for Clean Language compiler"
license = "MIT"
repository = "https://github.com/Ivan-Pasco/clean-language-manager"
homepage = "https://github.com/Ivan-Pasco/clean-language-manager"
keywords = ["clean", "language", "compiler", "version-manager"]
categories = ["development-tools"]

[lib]
name = "cleen"
path = "src/lib.rs"

[[bin]]
name = "cleen"
path = "src/main.rs"

[[bin]]
name = "frame"
path = "src/bin/frame.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system
dirs = "6.0"
which = "7.0"

# Date/time for backups
chrono = { version = "0.4", features = ["serde"] }

# Archive handling - updated versions
tar = "0.4"
flate2 = "1.0"
zip = "2.2"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
